Added css, jquery and ouibounce.js to the index page

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>The landing page</title>
+<link rel="stylesheet" href="css/ouibounce.min.css">
 </head>
 
 <body>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script src="js/ouibounce.js"></script>
 </body>
 </html>
