--- a/index.html
+++ b/index.html
@@ -4,11 +4,61 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>The landing page</title>
 <link rel="stylesheet" href="css/ouibounce.min.css">
+<link rel="stylesheet" href="css/custom.css">
 </head>
 
 <body>
 
+<!-- OuiBounce Modal -->
+    <div id="ouibounce-modal">
+      <div class="underlay"></div>
+      <div class="modal">
+        <div class="modal-title">
+          <h3>Before you leave...</h3>
+        </div>
+
+        <div class="modal-body">
+          <h4>Sure this offer interests you, doesn't it?<br />
+          Why not drop us your email address so that we get back to you instead. :)</h4>
+          
+          <form method="post" enctype="multipart/form-data" action="http://covomo-test-projekt.dev/api.php">
+            <input type="text" placeholder="you@email.com" name="email" id="email">
+            <input type="submit" value="learn more &raquo;">
+            <p class="form-notice">*this is a fake form</p>
+          </form>
+        </div>
+
+        <div class="modal-footer">
+          <p>no thanks</p>
+        </div>
+      </div>
+    </div>
+
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="js/ouibounce.js"></script>
+
+<script>
+
+      // if you want to use the 'fire' or 'disable' fn,
+      // you need to save OuiBounce to an object
+      var _ouibounce = ouibounce(document.getElementById('ouibounce-modal'), {
+        aggressive: true,
+        timer: 0,
+        callback: function() { console.log('ouibounce fired!'); }
+      });
+
+      $('body').on('click', function() {
+        $('#ouibounce-modal').hide();
+      });
+
+      $('#ouibounce-modal .modal-footer').on('click', function() {
+        $('#ouibounce-modal').hide();
+      });
+
+      $('#ouibounce-modal .modal').on('click', function(e) {
+        e.stopPropagation();
+      });
+    </script>
+
 </body>
 </html>
