--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 
 <body>
 
+	<h1>The products are</h1>
+
+    <table id="pagetable" align="center">
+    	<tr>
+        	<td><div class="product"></div>Item 1</td>
+            <td><div class="product"></div>Item 2</td>
+            <td><div class="product"></div>Item 3</td>
+        </tr>
+        
+        <tr>
+        	<td><div class="product"></div>Item 4</td>
+            <td><div class="product"></div>Item 5</td>
+            <td><div class="product"></div>Item 6</td>
+        </tr>
+    </table>
+
 <!-- OuiBounce Modal -->
     <div id="ouibounce-modal">
       <div class="underlay"></div>
@@ -22,7 +38,7 @@
           Why not drop us your email address so that we get back to you instead. :)</h4>
           
           <form method="post" enctype="multipart/form-data" action="http://covomo-test-projekt.dev/api.php">
-            <input type="text" placeholder="you@email.com" name="email" id="email">
+            <input type="text" placeholder="you@email.com" name="email" id="email" required="required">
             <input type="submit" value="learn more &raquo;">
             <p class="form-notice">*this is a fake form</p>
           </form>
