--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <div class="modal-title">
           <h3>Success!</h3>
         </div>
+        <div class="modal-body">
+          <h4>We have received your email address and shall get back to you shortly.</h4>
+        </div>
       </div>
     </div>
 
