--- a/index.html
+++ b/index.html
@@ -110,9 +110,8 @@
     <script type="text/javascript" charset="utf-8">
       $(function(){
         var opts = { language: "en", pathPrefix: "js/" };
-        $("[data-localize]")
-          .localize("texts", opts)
-      });
+        	$("[data-localize]").localize("texts", opts)
+      	})
     </script>
 
 </body>
